Учил лорем и ul с li

--- a/index.html
+++ b/index.html
@@ -8,5 +8,46 @@
 </head>
 <body>
     fdghfdgh
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+     Dolorem animi velit quo repudiandae cumque, placeat quod
+      tempore asperiores, dicta qu
+    asi est atque sit qui eum repellat officiis
+     officia architecto odio.
+     Lorem ipsum dolor sit amet consectetur, adipisicing
+      elit. Tempore quia sunt ullam alias recusandae, quos,
+       laborum corporis ipsum dolore rerum eaque! Pariatur ea
+        molestias officiis, sint fugiat sequi debitis veniam.
+        <ul>
+            <li>
+              Компьютеры и комплектующие
+              <ul>
+                <li>Процессоры
+                    <ul>
+                        <li>fghf</li>
+                        <li>ghgh</li>
+                        <li>gfdgfd</li>
+                    </ul>
+                </li>
+                <li>Мониторы</li>
+                <li>Видеокарты</li>
+              </ul>
+            </li>
+            <li>
+              Бытовая техника
+              <ul>
+                <li>Холодильники</li>
+                <li>Телевизоры</li>
+                <li>Стиральные машины</li>
+              </ul>
+            </li>
+            <li>
+              Товары для дома
+              <ul>
+                <li>Кресла</li>
+                <li>Матрасы</li>
+                <li>Электрокамины</li>
+              </ul>
+            </li>
+          </ul>
 </body>
 </html>
